# ATS-Postiats

./: .gitignore
DATS/: timer.dats  usart_async.dats
DATS/atmega328p/: timer.dats  usart.dats
SATS/: atomic.sats  cycbuf.sats  delay.sats  fifo.sats  global.sats  interrupt.sats  io.sats  main.sats  usart.sats
ccomp/runtime/: pats_ccomp_memalloca.h  pats_ccomp_typedefs.h
contrib/SMT/Z3/CATS/: Z3_sorts.cats  z3.cats  z3_arithmetic.cats  z3_bitvector.cats  z3_constapp.cats  z3_numerals.cats  z3_propeq.cats  z3_quantifier.cats  z3_solver.cats  z3_sort.cats  z3_symbol.cats
contrib/SMT/Z3/DATS/: z3.dats
contrib/SMT/Z3/SATS/: z3.sats  z3_arithmetic.sats  z3_bitvector.sats  z3_constapp.sats  z3_header.sats  z3_numeral.sats  z3_numerals.sats  z3_parser.sats  z3_propeq.sats  z3_quantifier.sats  z3_solver.sats  z3_sort.sats  z3_stringconv.sats  z3_symbol.sats
contrib/SMT/Z3/TEST/: Makefile  example.dats
contrib/avr/: README.md
contrib/avr/CATS/: atomic.cats  cycbuf.cats  global.cats  interrupt.cats  io.cats  io_bits.cats  timer.cats  usart.cats
contrib/avr/DATS/: atomic.dats  interrupt.dats  iom328p.dats  timer.dats  usart.dats
contrib/avr/DATS/atmega328p/: io.dats  pwm.dats  timer.dats  usart.dats
contrib/avr/HATS/: atspre_staload.hats  timer0.hats
contrib/avr/SATS/: atomic.sats  delay.sats  global.sats  interrupt.sats  io.sats  io_bits.sats  iom328p.sats  main.sats  pwm.sats  timer.sats  usart.sats
contrib/avr/examples/blinkey/: Makefile  blinkey  blinkey.dats
contrib/avr/examples/car/: Makefile  car.dats
contrib/avr/examples/pwm/: Makefile  fast.dats  phase-correct.dats  pwm.dats
contrib/avr/examples/timer/: Makefile  timer.dats
contrib/avr/examples/usart/: Makefile  usart.dats
contrib/avr/lib/: Makefile  README.md  usart_async.c
contrib/avr/lib/atmega328p/: Makefile  t0imer.c  t1imer.c  t2imer.c
contrib/avr/scripts/: io.rb
doc/DISTRIB/ATEXT/: atscntrb_libatshwxi_intinf.atxt
doc/EXAMPLE/ATSLF/: Makefile
doc/EXAMPLE/MISC/: arith_overflow.dats
doc/PROJECT/MEDIUM/ATS-constraint/: Makefile  README  constraint.sats  constraint_s2cst.dats  constraint_s2exp.dats  constraint_s2rt.dats  constraint_s2var.dats  constraint_stamp.dats  constraint_symbol.dats  test.sh
doc/PROJECT/MEDIUM/ATS-constraint/parsing/: Makefile  main.dats  parsing.dats  parsing.sats  parsing_s2cst.dats  parsing_s2exp.dats  parsing_s2rt.dats  parsing_s2var.dats
doc/PROJECT/MEDIUM/ATS-constraint/solving/: Makefile  dynloadall.dats  error.dats  error.sats  smt.sats  smt_ML.dats  smt_ML.sats  solver.dats  solver.sats  solver_dynload.dats  solver_initialize.dats  solver_s2cstmap.dats  solver_s2varmap.dats  solver_smt.dats  stack.sats
doc/PROJECT/MEDIUM/ATS-constraint/solving/Z3/: Makefile  main.dats  z3.dats  z3_dynload.dats
doc/PROJECT/MEDIUM/ATS-constraint/test/: README
doc/PROJECT/MEDIUM/ATS-constraint/test/array/: array.dats  array.sats  insertion.dats  partition.smt2  quicksort.dats  quicksort.smt2
doc/PROJECT/MEDIUM/ATS-constraint/test/bv/: bv.dats  bv.sats
doc/TYPECHECKER/: README.md  unsat.dats
examples/blinkey/: Makefile
examples/pwm/: pwm.dats
examples/timer/: Makefile  timer.dats
examples/timer/c/: timer.c
lib/: main.c
lib/atmega328p/: t1imer.c  t2imer.c
libats/DATS/: linmap_avltree.dats  linmap_rbtree.dats
libats/SATS/: linmap_rbtree.sats
prelude/: fixity.ats  params.hats
prelude/CATS/CODEGEN/: integer.atxt
prelude/SATS/CODEGEN/: array.atxt  integer.atxt
src/: CMakeLists.txt  Makefile  Makefile_CBOOT  Makefile_postiats  pats_basics.dats  pats_constraint3.dats  pats_constraint3.sats  pats_constraint3_init.dats  pats_constraint3_simplify.dats  pats_constraint3_smt.dats  pats_constraint3_solve.dats  pats_constraint3_solve_smt_z3.hats  pats_global.dats  pats_global.sats  pats_intinf.dats  pats_intinf.sats  pats_lintprgm.sats  pats_lintprgm_myint_intinf.dats  pats_main.dats  pats_params.hats  pats_patcst2.sats  pats_smt.sats  pats_smt_cvc4.dats  pats_smt_yices.dats  pats_smt_yices.hats  pats_smt_z3.dats  pats_smt_z3.hats  pats_smt_z3_ats2.dats  pats_staexp2_jsonize.dats  pats_staexp2_sort.dats  pats_staexp2_util.sats  pats_staexp2_util2.dats  pats_trans2_staexp.dats  pats_trans3_syncst.dats
src/CBOOT/: setup.js  test.html
src/CBOOT/js/: editor.html  setup.js
src/CBOOT/prelude/: Makefile
src/bootstrap0/: CMakeLists.txt  pats_basics_dats.c  pats_basics_sats.c  pats_ccomp_caseof_dats.c  pats_ccomp_ccompenv_dats.c  pats_ccomp_claulst_dats.c  pats_ccomp_d2env_dats.c  pats_ccomp_dats.c  pats_ccomp_decl_dats.c  pats_ccomp_dynexp_dats.c  pats_ccomp_emit2_dats.c  pats_ccomp_emit3_dats.c  pats_ccomp_emit_dats.c  pats_ccomp_environ_dats.c  pats_ccomp_funent_dats.c  pats_ccomp_funlab_dats.c  pats_ccomp_hipat_dats.c  pats_ccomp_hitype_dats.c  pats_ccomp_instrseq_dats.c  pats_ccomp_looping_dats.c  pats_ccomp_main_dats.c  pats_ccomp_print_dats.c  pats_ccomp_sats.c  pats_ccomp_subst_dats.c  pats_ccomp_template_dats.c  pats_ccomp_tmplab_dats.c  pats_ccomp_tmpvar_dats.c  pats_ccomp_util_dats.c  pats_comarg_dats.c  pats_comarg_sats.c  pats_constraint3_dats.c  pats_constraint3_icnstr_dats.c  pats_constraint3_init_dats.c  pats_constraint3_print_dats.c  pats_constraint3_sats.c  pats_constraint3_simplify_dats.c  pats_constraint3_solve_dats.c  pats_constraint3_solve_smt.hats  pats_constraint3_solve_smt_none.hats  pats_constraint3_solve_smt_yices.hats  (+190 more)
