CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

PROJECT (POSTIATS C)

SET (
   CMAKE_MODULE_PATH $ENV{ATSHOME}/share/CMake
) # end of [SET]

FIND_PACKAGE (ATS REQUIRED)
IF (NOT ATS_FOUND)
MESSAGE (FATAL_ERROR "ATS is not found!")
ENDIF ()

SET (
    SOURCES
    pats_basics_dats.c
    pats_basics_sats.c
    pats_ccomp_caseof_dats.c
    pats_ccomp_ccompenv_dats.c
    pats_ccomp_claulst_dats.c
    pats_ccomp_d2env_dats.c
    pats_ccomp_dats.c
    pats_ccomp_decl_dats.c
    pats_ccomp_dynexp_dats.c
    pats_ccomp_emit2_dats.c
    pats_ccomp_emit3_dats.c
    pats_ccomp_emit_dats.c
    pats_ccomp_environ_dats.c
    pats_ccomp_funent_dats.c
    pats_ccomp_funlab_dats.c
    pats_ccomp_hipat_dats.c
    pats_ccomp_hitype_dats.c
    pats_ccomp_instrseq_dats.c
    pats_ccomp_looping_dats.c
    pats_ccomp_main_dats.c
    pats_ccomp_print_dats.c
    pats_ccomp_sats.c
    pats_ccomp_subst_dats.c
    pats_ccomp_template_dats.c
    pats_ccomp_tmplab_dats.c
    pats_ccomp_tmpvar_dats.c
    pats_ccomp_util_dats.c
    pats_comarg_dats.c
    pats_comarg_sats.c
    pats_constraint3_dats.c
    pats_constraint3_icnstr_dats.c
    pats_constraint3_init_dats.c
    pats_constraint3_print_dats.c
    pats_constraint3_sats.c
    pats_constraint3_simplify_dats.c
    pats_constraint3_solve_dats.c
    pats_counter_dats.c
    pats_counter_sats.c
    pats_depgen_dats.c
    pats_depgen_sats.c
    pats_dmacro2_dats.c
    pats_dmacro2_eval0_dats.c
    pats_dmacro2_eval1_dats.c
    pats_dmacro2_print_dats.c
    pats_dmacro2_sats.c
    pats_dyncst2_dats.c
    pats_dyncst2_sats.c
    pats_dynexp1_dats.c
    pats_dynexp1_print_dats.c
    pats_dynexp1_sats.c
    pats_dynexp2_dats.c
    pats_dynexp2_dcst_dats.c
    pats_dynexp2_dmac_dats.c
    pats_dynexp2_dvar_dats.c
    pats_dynexp2_print_dats.c
    pats_dynexp2_sats.c
    pats_dynexp2_util_dats.c
    pats_dynexp2_util_sats.c
    pats_dynexp3_dats.c
    pats_dynexp3_print_dats.c
    pats_dynexp3_sats.c
    pats_e1xpval_dats.c
    pats_e1xpval_error_dats.c
    pats_e1xpval_sats.c
    pats_effect_dats.c
    pats_effect_sats.c
    pats_errmsg_dats.c
    pats_errmsg_sats.c
    pats_error_dats.c
    pats_error_sats.c
    pats_filename_dats.c
    pats_filename_sats.c
    pats_fixity_fxty_dats.c
    pats_fixity_prec_dats.c
    pats_fixity_sats.c
    pats_global_dats.c
    pats_global_sats.c
    pats_hidynexp_dats.c
    pats_hidynexp_print_dats.c
    pats_hidynexp_sats.c
    pats_hidynexp_util_dats.c
    pats_histaexp_dats.c
    pats_histaexp_funlab_dats.c
    pats_histaexp_print_dats.c
    pats_histaexp_sats.c
    pats_intinf_dats.c
    pats_intinf_sats.c
    pats_label_dats.c
    pats_label_sats.c
    pats_lexbuf_dats.c
    pats_lexbuf_sats.c
    pats_lexing_dats.c
    pats_lexing_error_dats.c
    pats_lexing_print_dats.c
    pats_lexing_sats.c
    pats_lexing_token_dats.c
    pats_lintprgm_dats.c
    pats_lintprgm_myint_int_dats.c
    pats_lintprgm_myint_intinf_dats.c
    pats_lintprgm_print_dats.c
    pats_lintprgm_sats.c
    pats_lintprgm_solve_dats.c
    pats_location_dats.c
    pats_location_sats.c
    pats_main_dats.c
    pats_namespace_dats.c
    pats_namespace_sats.c
    pats_parsing_base_dats.c
    pats_parsing_dats.c
    pats_parsing_decl_dats.c
    pats_parsing_dynexp_dats.c
    pats_parsing_e0xp_dats.c
    pats_parsing_error_dats.c
    pats_parsing_kwds_dats.c
    pats_parsing_p0at_dats.c
    pats_parsing_sats.c
    pats_parsing_sort_dats.c
    pats_parsing_staexp_dats.c
    pats_parsing_toplevel_dats.c
    pats_parsing_util_dats.c
    pats_patcst2_dats.c
    pats_patcst2_sats.c
    pats_reader_dats.c
    pats_reader_sats.c
    pats_smt_sats.c
    pats_smt_z3_dats.c
    pats_stacst2_dats.c
    pats_stacst2_sats.c
    pats_staexp1_dats.c
    pats_staexp1_print_dats.c
    pats_staexp1_sats.c
    pats_staexp2_ctxt_dats.c
    pats_staexp2_dats.c
    pats_staexp2_dcon_dats.c
    pats_staexp2_error_dats.c
    pats_staexp2_error_sats.c
    pats_staexp2_hole_dats.c
    pats_staexp2_pprint_dats.c
    pats_staexp2_print_dats.c
    pats_staexp2_sats.c
    pats_staexp2_scst_dats.c
    pats_staexp2_skexp_dats.c
    pats_staexp2_solve_dats.c
    pats_staexp2_solve_sats.c
    pats_staexp2_sort_dats.c
    pats_staexp2_svar_dats.c
    pats_staexp2_svvar_dats.c
    pats_staexp2_szexp_dats.c
    pats_staexp2_util1_dats.c
    pats_staexp2_util2_dats.c
    pats_staexp2_util3_dats.c
    pats_staexp2_util_sats.c
    pats_stamp_dats.c
    pats_stamp_sats.c
    pats_symbol_dats.c
    pats_symbol_sats.c
    pats_symenv_dats.c
    pats_symenv_sats.c
    pats_symmap_dats.c
    pats_symmap_sats.c
    pats_syntax_dats.c
    pats_syntax_print_dats.c
    pats_syntax_sats.c
    pats_tokbuf_dats.c
    pats_tokbuf_sats.c
    pats_trans1_decl_dats.c
    pats_trans1_dynexp_dats.c
    pats_trans1_e0xp_dats.c
    pats_trans1_effect_dats.c
    pats_trans1_env_dats.c
    pats_trans1_env_sats.c
    pats_trans1_error_dats.c
    pats_trans1_p0at_dats.c
    pats_trans1_sats.c
    pats_trans1_sort_dats.c
    pats_trans1_staexp_dats.c
    pats_trans1_syndef_dats.c
    pats_trans2_decl_dats.c
    pats_trans2_dynexp_dats.c
    pats_trans2_env_dats.c
    pats_trans2_env_sats.c
    pats_trans2_error_dats.c
    pats_trans2_impdec_dats.c
    pats_trans2_p1at_dats.c
    pats_trans2_sats.c
    pats_trans2_sort_dats.c
    pats_trans2_staexp_dats.c
    pats_trans3_appsym_dats.c
    pats_trans3_assgn_dats.c
    pats_trans3_caseof_dats.c
    pats_trans3_decl_dats.c
    pats_trans3_deref_dats.c
    pats_trans3_dynexp_dn_dats.c
    pats_trans3_dynexp_up_dats.c
    pats_trans3_env_dats.c
    pats_trans3_env_dvar_dats.c
    pats_trans3_env_effect_dats.c
    pats_trans3_env_lamlp_dats.c
    pats_trans3_env_lstate_dats.c
    pats_trans3_env_pfman_dats.c
    pats_trans3_env_print_dats.c
    pats_trans3_env_sats.c
    pats_trans3_env_scst_dats.c
    pats_trans3_env_svar_dats.c
    pats_trans3_env_termet_dats.c
    pats_trans3_error_dats.c
    pats_trans3_fldfrat_dats.c
    pats_trans3_looping_dats.c
    pats_trans3_lvalres_dats.c
    pats_trans3_p2at_dats.c
    pats_trans3_patcon_dats.c
    pats_trans3_ptrof_dats.c
    pats_trans3_sats.c
    pats_trans3_selab_dats.c
    pats_trans3_syncst_dats.c
    pats_trans3_util_dats.c
    pats_trans3_viewat_dats.c
    pats_trans3_xchng_dats.c
    pats_typerase_decl_dats.c
    pats_typerase_dynexp_dats.c
    pats_typerase_error_dats.c
    pats_typerase_sats.c
    pats_typerase_staexp_dats.c
    pats_utils_dats.c
    pats_utils_sats.c
)

ADD_EXECUTABLE (
         patsopt ${SOURCES}
) # end of [ADD_EXECUTABLE]

TARGET_LINK_LIBRARIES (patsopt gmp z3 rt)
